roles/auto-scaling-group/templates/cfn_auto_scaling_group.yml
---
AWSTemplateFormatVersion: "2010-09-09"
Description: Provision Auto Scaling Resources

Parameters:
  CidrWhitelist:
    Description: The external IP addresses allowed to access resources
    Type: String
  ImageId:
    Description: AMI for EC2 instance
    Type: String
  InstanceType:
    Description: Instance Type for EC2 instance
    Type: String
  KeyName:
    Description: PrivateKey for EC2 instance
    Type: AWS::EC2::KeyPair::KeyName
  Port:
    Description: Port Number
    Type: String
  TeamName:
    Description: The Team who owns this stack
    Type: String

Resources:
  ApplicationSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${TeamName}-app-security-group
      GroupDescription: Security Group to control EC2 traffic
      VpcId: !ImportValue "cloud-vpc-id"
      SecurityGroupIngress:
        - SourceSecurityGroupId: !ImportValue "operations-load-balancer-security-group"
          IpProtocol: tcp
          FromPort: !Ref Port
          ToPort: !Ref Port
          Description: Load Balancer Access
        - CidrIp: !Ref CidrWhitelist
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          Description: app connection
        - CidrIp: !Ref CidrWhitelist
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          Description: ssh connection
      Tags:
        - Key: Name
          Value: !Sub ${TeamName}-app-security-group

  LaunchConfiguration:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      IamInstanceProfile:
        Fn::ImportValue: !Sub ${TeamName}-instance-profile
      ImageId: !Ref ImageId
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      SecurityGroups:
        - !Ref ApplicationSecurityGroup
      UserData:
        Fn::Base64: !Sub |
            #!/bin/bash
            yum update -y
            yum install -y httpd
            systemctl start httpd
            systemctl enable httpd

  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    UpdatePolicy:
      AutoScalingRollingUpdate:
        MinInstancesInService: 1
        MaxBatchSize: 1
        PauseTime: PT30S
    Properties:
      VPCZoneIdentifier:
        - !ImportValue "cloud-external-app-subnet-a"
        - !ImportValue "cloud-external-app-subnet-b"
      Cooldown: 300
      LaunchConfigurationName: !Ref LaunchConfiguration
      DesiredCapacity: 1
      MinSize: 1
      MaxSize: 2
      TargetGroupARNs:
        - !ImportValue "operations-target-group"
      HealthCheckGracePeriod: 600
      HealthCheckType: ELB
